--- a/resources/styles/common/global.scss
+++ b/resources/styles/common/global.scss
@@ -10,12 +10,11 @@
   .has-#{$color}-background-color {
     background-color: $value;
   }
+}
 
-  .bg-#{$color} {
-    background-color: $value;
-  }
-
-  .contrast-#{$color} {
-    color: color-contrast($value);
+@each $color-name,
+$color-value in $theme-colors {
+  .is-style-btn-#{$color-name} {
+    @include button-variant($color-value, $color-value);
   }
 }
