--- a/resources/styles/config/external.scss
+++ b/resources/styles/config/external.scss
@@ -12,9 +12,9 @@
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/variables-dark";
 
 // 4. Include any default map overrides here
-
 
 // 5. Include remainder of required parts
 @import "~bootstrap/scss/maps";
