--- a/resources/styles/components/buttons.scss
+++ b/resources/styles/components/buttons.scss
@@ -2,8 +2,7 @@
  * Buttons
  */
 
-@each $color-name,
-$color-value in $theme-colors {
+@each $color-name, $color-value in $theme-colors {
   .btn-#{$color-name} {
     @include button-variant($color-value, $color-value);
   }
