Added some blocks but also trying to upgrade Sage

--- a/resources/styles/components/block-styles.scss
+++ b/resources/styles/components/block-styles.scss
@@ -7,9 +7,9 @@
 }
 
 .is-style-vertical-stack {
-  @extend .vstack;
+  @extend .d-flex, .flex-column;
 }
 
 .is-style-horizontal-stack {
-  @extend .hstack;
+  @extend .d-flex, .flex-row;
 }
